@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-02-01T08:18:07Z",
-  "count_outdated" : 1161,
-  "uniques_outdated" : 736,
-  "count" : 1193,
+  "timestamp" : "2024-02-01T16:18:01Z",
+  "count_outdated" : 1163,
+  "uniques_outdated" : 737,
+  "count" : 1194,
   "uniques" : 754,
   "clones" : [
-    {
-      "timestamp": "2024-01-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-01-19T00:00:00Z",
       "count": 2,
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2024-02-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
