@@ -1,3 +1,12 @@
+2024-02-01T16:18:01Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7744305835 # 77
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-01
+* notice: last 14d: unq all: 4 31
+* notice: prev accum: outdated-unq outdated-all / unq all: 736 1161 / 754 1193
+* notice: next accum: outdated-unq outdated-all / unq all: 737 1163 / 754 1194
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2024-01-18] / [2024-02-01]
+
 2024-02-01T08:18:07Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7738204515 # 76
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-01
